    + [BR] Correct a typo on tag name and do not raise
      bad-intended-distribution if distribution is still
      set to UNRELEASED.  (Closes: #765344).
  * checks/fields.desc:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz (Closes: #751949).
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for
      missing-license-paragraph-in-dep5-copyright tag.
      Do not allow to reference header paragraph,
      emit a specific tag.
      (Closes: #766118).
    + [BR] Detect if license short name are unique.
    + [BR] Avoid false positive license-problem-undefined-license
      for - in short license.

  * collection/strings:
    + [NT] Pass "-a" to strings to avoid possible security
      issues in strings.

  * data/binaries/arch-regex:
    + [NT] Add arm64 and ppc64el regex.
    + [NT] Correct armel and armhf regex to cope with
      statically linked binaries.  (Closes: #768884)
  * data/changes-file/known-dists:
    + [ADB] Add "stretch".
  * data/cruft/rfc-whitelist:
    + [BR] Whitelist dual licensed vorbis rfc5215.
  * data/files/privacy-breaker-websites:
    + [BR] Add specific test for privacy breach with modernizr.js
      (Closes: #769679).

  * debian/control:
    + [NT] Recommend dpkg (>= 1.17.14) for the --ctrl-tarfile
      option in dpkg-deb.  Lintian relies on it to support
      (u)deb files without a gzip compressed control.tar file.

  * frontend/lintian:
    + [NT] Produce a better error message for lintian detects
      that a check has a dependency on an unknown collection.

  * lib/Lintian/Command.pm:
    + [NT] Use croak() rather than L::Util's fail() on errors.
      The issues are generally not "internal errors".
  * lib/Lintian/Util.pm:
    + [NT] Prefer dpkg-deb --ctrl-tarfile to "ar p" when dpkg
      is recent enough.
